--- a/components/pdf-less/pdf.less
+++ b/components/pdf-less/pdf.less
@@ -15,6 +15,9 @@ h2 {
 	padding: 1em;
 	font-size: 8px;
 	text-align: center;
+	img {
+		padding-top: .5em;
+	}
 	&:before, &:after {
 		content: 'Add this photo and caption here';
 		display: block;
@@ -34,6 +37,11 @@ table {
 	width: 100%;
 	td, th {
 		border: 1px solid gray;
-		padding: 10px;
+		padding: .5em 1em;
+	}
+	th {
+		background-color: black;
+		color: white;
+		text-align: left;
 	}
 }
